basicop/multiply/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: multiply
  name: multiply
  namespace: <PROJECT>
spec:
  replicas: 1
  selector:
    deploymentconfig: multiply
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: multiply
        deploymentconfig: multiply
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: multiply
        ports:
        - containerPort: 8080
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - multiply
      from:
        kind: ImageStreamTag
        name: multiply:latest
        namespace: calculator
    type: ImageChange
  - type: ConfigChange
