basicop/multiply/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: multiply
  name: multiply
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /basicop/multiply
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: multiply
    weight: 100
  wildcardPolicy: None
